--- a/app/views/admin/exercises/new.html.erb
+++ b/app/views/admin/exercises/new.html.erb
@@ -5,9 +5,9 @@
       <div class="card shadow-sm" style="border-radius: 1.5rem;">
       <% # TODO: "move border-radius for card to a class" %>
         <div class="card-body">
-          <h1 class="mx-3">Edit Activity</h1>
+          <h1 class="mx-3">New Exercise</h1>
           <div class="card-text m-4">
-            <%= render 'form', activity: @activity %>
+            <%= render 'form', exercise: @exercise %>
           </div>
         </div>
       </div>
