--- a/app/views/admin/workout_exercises/show.html.erb
+++ b/app/views/admin/workout_exercises/show.html.erb
@@ -3,26 +3,26 @@
     <div class="card">
       <div class="card-body">
         <div class="card-title">
-          <h5>Activity Details</h5>
+          <h5>Exercise Details</h5>
         </div>
         <p class="leading">
-          Below are the details for the <%= @workout_activity.activity.name %>
+          Below are the details for the <%= @workout_exercise.exercise.name %>
         </p>
         <hr>
         <div class="card-body">
           <dl class="row">
             <dt class="col-3">Name</dt>
-            <dd class="col-9"><%= @workout_activity.activity.name %></dd>
+            <dd class="col-9"><%= @workout_exercise.exercise.name %></dd>
             <dt class="col-3">Sets</dt>
-            <dd class="col-9"><%= @workout_activity.series.set %></dd>
+            <dd class="col-9"><%= @workout_exercise.series.set %></dd>
             <dt class="col-3">Reps</dt>
-            <dd class="col-9"><%= @workout_activity.series.rep %></dd>
-            <% if @workout_activity.activity.has_weight %>
+            <dd class="col-9"><%= @workout_exercise.series.rep %></dd>
+            <% if @workout_exercise.exercise.has_weight %>
             <dt class="col-3">Weight</dt>
-            <dd class="col-9"><%= @workout_activity.variation.weight %> lbs</dd>
+            <dd class="col-9"><%= @workout_exercise.variation.weight %> lbs</dd>
             <% end %>
             <dt class="col-3">Variation</dt>
-            <dd class="col"><%= @workout_activity.variation.description %></dd>
+            <dd class="col"><%= @workout_exercise.variation.description %></dd>
           </dl>
         </div>
       </div>
