--- a/app/views/shared/_admin_panel.html.erb
+++ b/app/views/shared/_admin_panel.html.erb
@@ -2,8 +2,8 @@
   <h2>Admin</h2>
   <ul class="nav flex-column text-sm-start">
     <li class="nav-item">
-      <%= link_to(admin_activities_path, class: "nav-link") do %>
-        <i class="fad fa-running"></i> Activities
+      <%= link_to(admin_exercises_path, class: "nav-link") do %>
+        <i class="fad fa-running"></i> Exercises
       <% end %>
     </li>
     <li class="nav-item">
